remove with from *"; ; exit ";

--- a/introToWebDev.html
+++ b/introToWebDev.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <style>
+        /* border-box makes everthing in the app being measured in border-box */
         * {
             box-sizing: border-box;
-            width: 500px;
-            border: 1px solid blue;
         }
         .main-brand-3.title-3 {
             color:red;
