--- a/layouts.html
+++ b/layouts.html
@@ -1,3 +1,4 @@
+<!-- https://btholt.github.io/intro-to-web-dev-v2/layout-css -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,14 @@
             display:flex;
             width:100%;
             border: 1px solid black;
+            /* https://developer.mozilla.org/en-US/docs/Web/CSS/flex-direction */
+            /* flex-direction: column; */
+            /* https://developer.mozilla.org/en-US/docs/Web/CSS/justify-content */
+            justify-content: center;
+            /* https://developer.mozilla.org/en-US/docs/Web/CSS/align-items */
+            /* align between items */
+            align-items: center;
+            font-size: 20px;
         }
         .box-1 {
         border: 1px solid black;
@@ -46,6 +55,7 @@
         <div class="box-2">float 2</div>
         <div class="box-3">float 3</div>
     </div>
+    <!-- with flex you always work with the parent -->
     <div class="flex-container">
         <div class="box-1">flex box 1</div>
         <div class="box-2">flex box 2</div>
