--- a/tryFlex.html
+++ b/tryFlex.html
@@ -8,6 +8,14 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    <p>hello world</p>
+    <div class="navBar">
+        <div class="navBox">home</div>
+        <div class="navBox">my profile</div>
+        <div class="navBox">search</div>
+        <div class="navBox">sign up</div>
+    </div>
+    <div class="contents">
+        <div class></div>
+    </div>
 </body>
 </html>
