css flex box for contents

--- a/tryFlex.html
+++ b/tryFlex.html
@@ -9,13 +9,21 @@
 </head>
 <body>
     <div class="navBar">
-        <div class="navBox">home</div>
-        <div class="navBox">my profile</div>
-        <div class="navBox">search</div>
-        <div class="navBox">sign up</div>
+        <div class="navBox"><a href="">home</a></div>
+        <div class="navBox"><a href="">my profile</a></div>
+        <div class="navBox"><a href="">search</a></div>
+        <div class="navBox"><a href="">sign up</a></div>
     </div>
     <div class="contents">
-        <div class></div>
+        <div class="contentsBox">
+            <div class="contentsBox contentsColumns">
+                <div><h2>matches for you</h2></div>
+                
+                <div>As am hastily invited settled at limited civilly fortune me. Really spring in extent an by. Judge but built gay party world. Of so am he remember although required. Bachelor unpacked be advanced at. Confined in declared marianne is vicinity. </div>
+            </div>
+        </div>
+        <div class="contentsBox">what's new</div>
+        <div class="contentsBox">messages for you</div>
     </div>
 </body>
 </html>
