change nav tag and add hover to anchor

--- a/tryFlex.html
+++ b/tryFlex.html
@@ -8,12 +8,12 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="navBar">
+    <nav class="navBar">
         <div class="navBox"><a href="">home</a></div>
         <div class="navBox"><a href="">my profile</a></div>
         <div class="navBox"><a href="">search</a></div>
         <div class="navBox"><a href="">sign up</a></div>
-    </div>
+    </nav>
     <div class="contents">
         <div class="contentsBox">
             <div class="contentsBox contentsColumns">
