change list with script

--- a/javascriptDOM.html
+++ b/javascriptDOM.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="red-square"></div>
+    <ul>
+        <li class="list-change">Unchanged</li>
+        <li>won't change</li>
+        <li class="list-change">Unchanged</li>
+        <li class="list-change">Unchanged</li>
+        <li class="list-change">Unchanged</li>
+    </ul>
     <!-- script goes last -->
     <script src="./domScript.js">
     </script>
