add innertext with DOM

--- a/javascript-DOM.html
+++ b/javascript-DOM.html
@@ -16,6 +16,10 @@
         <li class="list-change">Unchanged</li>
         <li class="list-change">Unchanged</li>
     </ul>
+    <div class="get-inner-text">
+        <button>1</button>
+        <button >2</button>
+    </div>
     <!-- script goes last -->
     <script src="./domScript.js">
     </script>
