--- a/javascript-DOM.html
+++ b/javascript-DOM.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DOM domo</title>
+    <title>DOM demo</title>
 </head>
 <body>
     <div class="red-square"></div>
@@ -16,6 +16,7 @@
         <li class="list-change">Unchanged</li>
         <li class="list-change">Unchanged</li>
     </ul>
+<!-- it will log all 1 and 2 if click the side because it selects the whole div -->
     <div class="get-inner-text">
         <button>1</button>
         <button >2</button>
