--- a/backgroundImage.html
+++ b/backgroundImage.html
@@ -1,56 +1,51 @@
 <!--https://litmus.com/blog/the-ultimate-guide-to-background-images-in-email-->
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="x-apple-disable-message-reformatting" />
-  <title>SEPHORA</title>
-  <style type="text/css">
-    a:visited {
-      color: #000000;
-    }
-  </style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="x-apple-disable-message-reformatting"/>
+<title>SEPHORA</title>
+<style type="text/css">
+a:visited {
+    color: #000000;
+}
+</style>
 </head>
-
 <body style="padding:0;">
-  <table align="center" bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0" width="700">
-    <tr>
-      <td>
-        <!--main-->
-
-        <table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
-          <tr>
-            <!--1. using table attributes-->
-            <!--it has repeat across both x and y axis, can result unexpected and unwanted behavior-->
-            <td align="center"
-              background="http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190921_Next_Big_Thing_bottom_banner.jpg"
-              style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;">hello table attributes</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  <table align="center" border="0" cellpadding="0" cellspacing="0" width="700">
-    <tr>
-      <td height="20" style="font-size:0px;line-height:0px;" valign="top" />
-    </tr>
-    <tr>
-      <td style="font-size:0px;line-height:0px;" valign="top" width="25" />
-      <td valign="top" align="center" width="650">
-        <font color="#adadad" face="Arial,sans-serif"
-          style="font-family:Arial,sans-serif;font-size:10px;color:#adadad;">* Disclaimer </font>
-      </td>
-      <td style="font-size:0px;line-height:0px;" valign="top" width="25" />
-    </tr>
-    <tr>
-      <td height="20" style="font-size:0px;line-height:0px;" valign="top" />
-    </tr>
-  </table>
-  <div style="display:none; white-space:nowrap; font:15px courier; line-height:0;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
+<table align="center" bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0" width="700">
+  <tr>
+    <td><!--main-->
+      
+      <table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
+        <tr> 
+          <!--1. using table attributes--> 
+          <!--it has repeat across both x and y axis, can result unexpected and unwanted behavior-->
+          <td align="center" background="http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190921_Next_Big_Thing_bottom_banner.jpg" style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;">hello table attributes</td>
+        </tr>
+      </table></td>
+  </tr>
+  <tr>
+    <td><table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
+        <tr> 
+          <!--1. using inline css-->
+          <td align="center" style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;background-image: url('http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190921_Next_Big_Thing_bottom_banner.jpg')">hello inline css</td>
+        </tr>
+      </table></td>
+  </tr>
+</table>
+<table align="center" border="0" cellpadding="0" cellspacing="0" width="700">
+  <tr>
+    <td height="20" style="font-size:0px;line-height:0px;" valign="top"/>
+  </tr>
+  <tr>
+    <td style="font-size:0px;line-height:0px;" valign="top" width="25"/>
+    <td valign="top" align="center" width="650"><font color="#adadad" face="Arial,sans-serif"  style="font-family:Arial,sans-serif;font-size:10px;color:#adadad;">* Disclaimer </font></td>
+    <td style="font-size:0px;line-height:0px;" valign="top" width="25"/>
+  </tr>
+  <tr>
+    <td height="20" style="font-size:0px;line-height:0px;" valign="top"/>
+  </tr>
+</table>
+<div style="display:none; white-space:nowrap; font:15px courier; line-height:0;"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
 </body>
-
 </html>
