add background-repeat, background-size, and background-color to inline css

--- a/backgroundImage.html
+++ b/backgroundImage.html
@@ -27,8 +27,10 @@ a:visited {
   <tr>
     <td><table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
         <tr> 
-          <!--1. using inline css-->
-          <td align="center" style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;background-image: url('http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190921_Next_Big_Thing_bottom_banner.jpg')">hello inline css</td>
+          <!--1. using inline css--> 
+          <!--it repeats, doens't allow for resizing or positioning--> 
+          <!--make sure set full back color by using background-color-->
+          <td align="center" style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;background-image: url('http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190926_Makeup_Masters_mid_banner.jpg'); background-repeat: no-repeat;background-size: cover; background-color: antiquewhite">hello inline css</td>
         </tr>
       </table></td>
   </tr>
