example of embedded css

--- a/background-image.html
+++ b/background-image.html
@@ -9,6 +9,12 @@
 a:visited {
     color: #000000;
 }
+.bgImage {
+    font-size: 30px;
+    color: darkmagenta; /*font color*/
+    background-image: url('http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190926_Makeup_Masters_bottom_banner.jpg');
+    background-size: cover;
+}
 </style>
 </head>
 <body style="padding:0;">
@@ -31,6 +37,13 @@ a:visited {
           <!--it repeats, doens't allow for resizing or positioning--> 
           <!--make sure set full back color by using background-color-->
           <td align="center" style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;background-image: url('http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190926_Makeup_Masters_mid_banner.jpg'); background-repeat: no-repeat;background-size: cover; background-color: antiquewhite">hello inline css</td>
+        </tr>
+      </table></td>
+  </tr>
+  <tr>
+    <td><table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
+        <tr>
+          <td align="center" class="bgImage">hello embedded CSS</td>
         </tr>
       </table></td>
   </tr>
