--- a/background-image.html
+++ b/background-image.html
@@ -33,7 +33,7 @@ a:visited {
   <tr>
     <td><table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
         <tr> 
-          <!--1. using inline css--> 
+          <!--2. using inline css--> 
           <!--it repeats, doens't allow for resizing or positioning--> 
           <!--make sure set full back color by using background-color-->
           <td align="center" style="font-size: 30px; color: darkred;font-family: Arial, sans-serif;background-image: url('http://images.harmony.epsilon.com/ContentHandler/images/de0a3226-d396-4c2c-b3a8-3ede2f831505/images/190926_Makeup_Masters_mid_banner.jpg'); background-repeat: no-repeat;background-size: cover; background-color: antiquewhite">hello inline css</td>
@@ -43,6 +43,7 @@ a:visited {
   <tr>
     <td><table width="700" border="0" cellspacing="0" cellpadding="0" align="center" height="400px">
         <tr>
+          <!--3. using embedded css--> 
           <td align="center" class="bgImage">hello embedded CSS</td>
         </tr>
       </table></td>
