--- a/html-tags-cheatsheet.html
+++ b/html-tags-cheatsheet.html
@@ -1,34 +1,45 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Untitled Document</title>
-<style>
-table, td {
-    text-align: center;
-    align: center;
-    width: 700px;
-    border-color: lightslategrey;
-    border-style: solid;
-}
-table {
-    border-collapse: collapse;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Untitled Document</title>
+  <style>
+    table,
+    td {
+      text-align: center;
+      align: center;
+      width: 700px;
+      border-color: lightslategrey;
+      border-style: solid;
+    }
+
+    table {
+      border-collapse: collapse;
+    }
+  </style>
 </head>
 
 <body>
-<table>
-  <tr>
-    <td>strike</td>
-    <td>&lt;s&gt;&lt;/s&gt;</td>
-    <td><s>google</s></td>
-  </tr>
-  <tr>
-    <td>strong</td>
-    <td>&lt;strong&gt;&lt;/stong&gt;</td>
-    <td><strong>google</strong></td>
-  </tr>
-</table>
+  <table>
+    <tr>
+      <td>strike</td>
+      <td>&lt;s&gt;&lt;/s&gt;</td>
+      <td><s>google</s></td>
+    </tr>
+    <tr>
+      <td>strong</td>
+      <td>&lt;strong&gt;&lt;/stong&gt;</td>
+      <td><strong>google</strong></td>
+    </tr>
+    <tr>
+      <td>horizontal line</td>
+      <td>&lt;hr&gt;</td>
+      <td>
+        <hr>
+      </td>
+    </tr>
+  </table>
 </body>
+
 </html>
