background color css

--- a/html-tags-cheatsheet.html
+++ b/html-tags-cheatsheet.html
@@ -10,12 +10,16 @@
       text-align: center;
       align: center;
       width: 700px;
-      border-color: lightslategrey;
+      border-color: mistyrose;
       border-style: solid;
     }
 
     table {
       border-collapse: collapse;
+    }
+
+    #backgroundColor {
+      background-color: rgba(45, 45, 45, 0.1);
     }
   </style>
 </head>
@@ -37,6 +41,13 @@
       <td>&lt;hr&gt;</td>
       <td>
         <hr>
+      </td>
+    </tr>
+    <tr>
+      <td>background color</td>
+      <td>css - background-color: rgba(45, 45, 45, 0.1);</td>
+      <td>
+        <div id='backgroundColor'>hello world</div>
       </td>
     </tr>
   </table>
