css uppercase or lowercase, etc

--- a/html-tags-cheatsheet.html
+++ b/html-tags-cheatsheet.html
@@ -26,6 +26,10 @@
     #thumbnail {
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     }
+
+    #uppercase {
+      text-transform: uppercase;
+    }
   </style>
 </head>
 
@@ -64,9 +68,16 @@
         blur-radius,
         spread-radius and
         color, in that order.
-        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);</td>
+        css - box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);</td>
       <td>
         <div id='thumbnail'>hello world</div>
+      </td>
+    </tr>
+    <tr>
+      <td>css uppercase / lowercase etc</td>
+      <td>css - text-transform: uppercase;</td>
+      <td>
+        <div id='uppercase'>hello world</div>
       </td>
     </tr>
   </table>
