--- a/understanding-CSS.html
+++ b/understanding-CSS.html
@@ -16,17 +16,29 @@
         /*input type is text*/
         background: purple;
       }
+
+      .iamclass {
+          text-align: center;
+          line-height:.5em; /*em relative to the font-size*/
+      }
     </style>
     <meta charset="UTF-8" />
     <title>dummy store</title>
   </head>
 
   <body>
+      <div class="iamclass">
+          <p>text-align: center;</p>
+          <p>all text within the div will be text aligned</p>
+    </div>
     <p>hello world</p>
     <div class="parent">
       <div class="child">im child</div>
+      <div class="child">im child too</div>
     </div>
     <div class="child">im child without parent</div>
     <input type="text" />
+    
+    
   </body>
 </html>
