--- a/understanding-CSS.html
+++ b/understanding-CSS.html
@@ -33,6 +33,12 @@
       #beforeafter::after {
           content: " add after the element"
       }
+
+      p::selection { /*p tag will turn colors when highlight*/
+          background: yellow;
+          color: red;
+      }
+      
     </style>
     <meta charset="UTF-8" />
     <title>dummy store</title>
